removed firejail and full support for docker